--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -49,7 +49,7 @@ body.home-page {
 }
 
 .hero-title {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Researcher', sans-serif;
     font-size: 5.5rem;
     font-weight: 700;
     margin: 0 0 1.5rem 0;
